--- a/config/database.yml
+++ b/config/database.yml
@@ -47,9 +47,16 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+# production:
+#   <<: *default
+#   database: trippiece_production
+#   username: root
+#   password: <%= ENV['DATABASE_PASSWORD'] %>
+#   socket: /var/lib/mysql/mysql.sock
+
 production:
   <<: *default
-  database: trippiece_production
+  database: ~~~（それぞれのアプリケーション名によって異なっています。こちらは編集しないでください）
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
